feat: 修改.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,9 @@
 */sftp.json
 /tensorboard_logs
 *.pth
-<<<<<<< HEAD
 /test_result
 logs
-=======
 events*
 /test_result
 history_result
->>>>>>> 70da7ba (feat: 修改.gitignore)
+data
