feat: 修改.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 .idea/
-*.bak
-*/__pycache__
 .vscode/
-*/sftp.json
-/tensorboard_logs
-*.pth
-/test_result
-logs
-events*
+.git/
+
+tensorboard_logs
+result
+test_result
 history_result
 data
+logs
+
+*.bak
+*.pth
+
